# project-sentinel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
frontend/: next.config.ts  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
frontend/src/app/checkout/success/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/landing/: page.tsx
janus/: __init__.py  licensing.py  tier.py
janus/core/: approval.py  data_extraction.py  guardian.py
janus/integrations/: crewai.py  langchain.py  mcp.py  openai.py
janus/llm/: classifier.py
janus/mcp/: proxy.py
janus/tools/: __init__.py
janus/web/: app.py  licensing_routes.py  mcp_chat_agent.py  test_app.py
sentinel/exporters/: json_logger.py  otel.py  prometheus.py  webhook.py
sentinel/integrations/: crewai.py  langchain.py  mcp.py  openai.py
sentinel/web/: agent.py  app.py  events.py  schemas.py  tools.py
tests/: conftest.py  test_approval.py  test_data_extraction.py  test_email.py  test_exporter_coordinator.py  test_exporter_json.py  test_exporter_otel.py  test_exporter_prometheus.py  test_exporter_webhook.py  test_false_positive_detection.py  test_guardian.py  test_init.py  test_integration_agents.py  test_integration_crewai.py  test_integration_langchain.py  test_integration_mcp.py  test_integration_openai.py  test_itdr.py  test_licensing.py  test_mcp_client.py  test_mcp_config.py  test_mcp_proxy.py  test_monitor.py  test_multi_model.py  test_notifiers.py  test_persistent_session_store.py  test_proof.py  test_registry.py  test_risk_engine.py  test_sdk_and_integrations.py  test_tier.py  test_tool_execution.py  test_trace_exporter.py  test_web_agent.py  test_web_app.py  test_web_events.py  test_web_tools.py
tests/integration/: test_user_experience.py
