[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "janus-security"
version = "0.1.0"
description = "Autonomous security layer for AI agents. Every tool call passes through Janus."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [{name = "Janus Security"}]
keywords = ["ai", "security", "agents", "mcp", "llm", "guardian", "tool-use"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "anthropic>=0.43.0",
    "pydantic>=2.6.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "anyio>=4.2.0",
    "structlog>=24.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
]

[project.urls]
Homepage = "https://janus-security.dev"
Repository = "https://github.com/janus-security/janus"
Documentation = "https://janus-security.dev/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "hypothesis>=6.98.0",
    "time-machine>=2.13.0",
    "httpx>=0.28.0",
]
integrations = [
    "langchain-core>=0.3.0",
    "crewai>=0.100.0",
    "openai>=1.60.0",
    "mcp>=1.0.0",
]
exporters = [
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "prometheus-client>=0.21.0",
]
billing = [
    "stripe>=8.0.0",
    "resend>=2.0.0",
]

[project.scripts]
janus = "janus.cli.app:main"
janus-proxy = "janus.mcp.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["janus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "E402"]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
